--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,12 +23,14 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Build java file
         run: |
           ls
+          javac Main.java
+          
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Compiled Java
+          path:  Main.class 
           
