--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -28,9 +28,17 @@ jobs:
         run: |
           ls
           javac Main.java
-          
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Compiled Java
-          path:  Main.class 
+      
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env: 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with: 
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: New Release Yaay
+          draft: false
+          prerelease: false
+ 
           
